--- a/AghaShad_Shop.csproj
+++ b/AghaShad_Shop.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <Folder Include="MyExceptions\" />
+    <Folder Include="QueryService\Implementation\" />
   </ItemGroup>
 
 </Project>
